@@ -11,34 +11,41 @@
     <remarks>
       <para>
         Used for button press and button release events. The type
-        field will be one of GDK_BUTTON_PRESS, GDK_2BUTTON_PRESS,
-        GDK_3BUTTON_PRESS, and GDK_BUTTON_RELEASE.
+        field will be one of <see cref="F:Gdk.EventType.ButtonPress"/>,
+        <see cref="F:Gdk.EventType.TwoButtonPress" />,
+        <see cref="F:Gdk.EventType.ThreeButtonPress" />,
+        and <see cref="F:Gdk.EventType.ButtonRelease" />
       </para>
       <para>
         Double and triple-clicks result in a sequence of events being received. For double-clicks the order of events will be:
 
-        1. GDK_BUTTON_PRESS
-        2. GDK_BUTTON_RELEASE
-        3. GDK_BUTTON_PRESS
-        4. GDK_2BUTTON_PRESS
-        5. GDK_BUTTON_RELEASE
+        <list type="number">
+          <item><term><see cref="T:Gdk.EventType.ButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonRelease" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.TwoButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonRelease" /></term></item>
+        </list>
       </para>
       <para>
         Note that the first click is received just like a normal
         button press, while the second click results in a
-        GDK_2BUTTON_PRESS being received just after the
-        GDK_BUTTON_PRESS. Triple-clicks are very similar to
-        double-clicks, except that GDK_3BUTTON_PRESS is inserted after
+        <see cref="T:Gdk.EventType.TwoButtonPress" /> being received just after the
+        <see cref="T:Gdk.EventType.ButtonPress" />. Triple-clicks are very similar to
+        double-clicks, except that <see
+        cref="T:Gdk.EventType.ThreeButtonPress" /> is inserted after
         the third click. The order of the events is:
 
-        1. GDK_BUTTON_PRESS
-        2. GDK_BUTTON_RELEASE
-        3. GDK_BUTTON_PRESS
-        4. GDK_2BUTTON_PRESS
-        5. GDK_BUTTON_RELEASE
-        6. GDK_BUTTON_PRESS
-        7. GDK_3BUTTON_PRESS
-        8. GDK_BUTTON_RELEASE
+        <list type="number">
+          <item><term><see cref="T:Gdk.EventType.ButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonRelease" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.TwoButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonRelease" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ThreeButtonPress" /></term></item>
+          <item><term><see cref="T:Gdk.EventType.ButtonRelease" /></term></item>
+        </list>
       </para>
       <para>
         For a double click to occur, the second button press must
