@@ -8,9 +8,10 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>
-      Generated when the area of a <see cref="T:Gdk.Drawable" /> being copied, with
-      gdk_draw_drawable() or gdk_window_copy_area(), was completely
-      available.
+      Generated when the area of a <see cref="T:Gdk.Drawable" /> being
+      copied, with <see cref="T:Gdk.Drawable.DrawDrawable(Gdk.GC,Gdk.Drawable,int,int,int,int,int,int)"
+      /> or <see cref="T:Gdk.Window.CopyArea(int,int,int,int)" />, was
+      completely available.
     </summary>
     <remarks></remarks>
   </Docs>
