@@ -1,5 +1,10 @@
 2003-07-30  Duncan Mak  <duncan@ximian.com>
 
+	* en/Gdk/EventNoExpose.xml: 
+	* en/Gdk/EventButton.xml: Added hyperlinks.
+
+2003-07-30  Duncan Mak  <duncan@ximian.com>	
+
 	* en/Gnome/CanvasWidget.xml: 
 	* en/Gnome/CanvasRect.xml: 
 	* en/Gnome/CanvasRE.xml: 
